testsuite/tests/interpreter_errors/selector_kind_error/test.out
script.lkql:2:12: error: Type error: expected RecValue but got Bool
2 |     | * => true
  |            ^^^^

